[project]
name = "flux-intermediate-representation"
version = "0.1.0"
description = "Research project for capturing intermediate representations from FLUX models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flux",
    "torch >= 2.0.0",
    "torchvision",
    "einops",
    "fire >= 0.6.0",
    "huggingface-hub",
    "safetensors",
    "sentencepiece",
    "transformers >= 4.45.2",
    "tokenizers",
    "protobuf",
    "requests",
    "invisible-watermark",
    "accelerate",
    "pillow",
    "imageio",
    "imageio-ffmpeg",
]

[project.optional-dependencies]
dev = [
    "ruff >= 0.6.8",
    "ipython",
    "jupyter",
]
analysis = [
    "numpy",
    "matplotlib",
    "seaborn",
    "pandas",
]

[project.scripts]
capture-sample = "capture_sample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
flux = { path = "flux", editable = true }

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "E501",  # line too long - will be fixed in format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

